Page content first version

--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1765729921
+dateModified: 1765733805
 elementSources:
   craft\elements\Entry:
     -
@@ -16,14 +16,21 @@ elementSources:
         - link
         - dateCreated
         - dateUpdated
-        - 'fieldInstance:46845a5d-39e0-4661-b89c-dd450b0550f1'
       type: native
     -
+      defaultSort:
+        - title
+        - asc
+      defaultViewMode: ''
+      disabled: false
       key: singles
+      tableAttributes:
+        - status
+        - link
       type: native
     -
       heading: Channels
-      key: 'heading:50524dbc-263a-44e7-b177-49f8c04d16f9'
+      key: 'heading:675075b0-146b-4a74-bfff-edbaec898239'
       type: heading
     -
       defaultSort:
@@ -31,7 +38,7 @@ elementSources:
         - desc
       defaultViewMode: ''
       disabled: false
-      key: 'section:3464b9e3-ee55-4e2b-8ba4-22ae75f3b2c6' # Blog
+      key: 'section:cb4b8c9d-20f8-435d-9378-40621d8579e2' # Concerts
       tableAttributes:
         - status
         - postDate
@@ -39,18 +46,14 @@ elementSources:
         - link
       type: native
     -
-      condition:
-        class: craft\elements\conditions\entries\EntryCondition
-        elementType: craft\elements\Entry
-        fieldContext: global
-      defaultSort:
-        - id
-        - asc
-      defaultViewMode: ''
-      key: 'custom:71f9a45f-82d2-4aeb-9470-2acfdee0002e'
-      label: Concerts
-      tableAttributes: '-'
-      type: custom
+      key: 'section:251608a3-66bf-4dcd-a4f6-896de8c3c6b6' # Events
+      type: native
+    -
+      key: 'section:cfe57ae3-6eb9-4976-b280-e9a654067091' # People
+      type: native
+    -
+      key: 'section:f7c33fb2-e7cf-4803-8720-9a56d4c04471' # World
+      type: native
 email:
   fromEmail: ie.jackdoyle@gmail.com
   fromName: jackdoyle-portfolio
@@ -66,27 +69,33 @@ fs:
 meta:
   __names__:
     2fd64f3b-116f-4158-a643-487417f963a6: Image # Image
+    3a7d7f35-dbd7-4d0d-8538-5c589af9ad17: 'Concerts Single' # Concerts Single
     4df433fa-7f5d-4bd0-8256-d8bfb3fc177d: 'Photo Entry' # Photo Entry
+    4eb224ef-20bd-46eb-b9f5-2b036c3d408e: 'People Single' # People Single
     5b145a04-4bbe-4caa-be93-fea2bb0e0783: Image # Image
     7c9aafa6-7c58-486e-bfd0-fe906a81b2c4: 'Public Schema' # Public Schema
     7c87fd88-285f-4322-90b4-7a67e4807265: 'Capture date' # Capture date
     71d5b9a1-f483-483a-bdfc-fe8df9504777: Contact # Contact
+    97eb8ec9-414a-4b18-8c16-ba11d330a784: 'World Single' # World Single
     161cb289-056b-4e4b-828a-7065aef7acac: 'Post Categories' # Post Categories
     756d0cfb-c8e8-4367-98c3-f821f12b119f: Text # Text
     0840f648-5b6d-422b-ad96-bcaa66bc62d0: Text # Text
     871fe55d-5f99-4c5e-ab10-5cd8b0be8143: 'Post Content' # Post Content
     902fc92a-8b73-419b-b046-afc1f37ebcea: Contact # Contact
-    3464b9e3-ee55-4e2b-8ba4-22ae75f3b2c6: Blog # Blog
+    957b8ec3-b06b-499d-ac57-0aedf6008b91: 'Events Single' # Events Single
     6712cdd6-3bbf-49b0-8666-9fe46b5478c9: 'Site Info' # Site Info
     25451f73-e76c-402c-8c3a-e2b4b354d5ca: Topics # Topics
     251608a3-66bf-4dcd-a4f6-896de8c3c6b6: Events # Events
     378112d0-a712-4ff2-87e4-92f5ac432688: 'Jack Doyle' # Jack Doyle
+    453810de-f8ae-4caa-a73f-2976cc9cc55c: 'Gallery meta' # Gallery meta
     ad9420b0-2379-4dcc-8d78-3930095db1d6: Images # Images
     b753256c-ff31-460f-b741-7311916447e1: About # About
     ba3952b7-dbf0-4f79-b16f-d424793b28c8: Post # Post
     cb4b8c9d-20f8-435d-9378-40621d8579e2: Concerts # Concerts
+    cbc07d54-ec3a-4235-a1e6-9c3d36272859: Portfolio # Portfolio
     cfe57ae3-6eb9-4976-b280-e9a654067091: People # People
     e4c8b9e9-be96-4edd-8830-803bbc0d577a: jackdoyle-portfolio # jackdoyle-portfolio
+    ee1e90c3-7e58-4597-915d-a94766e76add: 'Section image' # Section image
     f7c33fb2-e7cf-4803-8720-9a56d4c04471: World # World
 system:
   edition: solo
