--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tailwindcss -i ./src/styles/tailwind.css -o ./web/styles.css --watch",
-    "build": "tailwindcss -i ./src/styles/tailwind.css -o ./web/styles.css --minify"
+    "build": "tailwindcss -i ./src/styles/tailwind.css -o ./web/styles.css --minify && cp ./web/styles.css ./public/styles.css"
   },
   "repository": {
     "type": "git",
